# qemu-compose

./: .gitignore  AGENTS.md  LICENSE.txt  README.md  cli-entry.py  example.image.manifest.json  jsonlisp.py  local_build_and_install.sh  log_tool.py  parse_log.py  pyproject.toml  resident.py  ruff.toml  zio.py
.github/workflows/: pypi.yml
.monkeycode/: MEMORY.md
examples/: example.image.manifest.json
examples/arch__uefi/: build.yml
examples/archlinux-cloudimg__amd64/: qemu-compose.yml
pyte/: escape.py  screens.py  streams.py
qemu/machine/: machine.py
qemu_compose/: images_command.py  jsonlisp.py  local_store.py  main.py  ps.py  run_command.py
qemu_compose/cmd/: down_command.py  images_command.py  ps_command.py  pull_command.py  rmi_command.py  run_command.py  ssh_command.py  start_command.py  stop_command.py  tag_command.py  up_command.py
qemu_compose/image/: __init__.py  manifest.py  oci_import.py
qemu_compose/instance/: __init__.py  http.py  name.py  qemu_runner.py  terminal.py
qemu_compose/qemu/: __init__.py
qemu_compose/qemu/machine/: machine.py  qtest.py
qemu_compose/qemu/qmp/: legacy.py
qemu_compose/utils/: __init__.py  hostnames.py  human_readable.py  names_gen.py  utcdatetime.py  vsock.py
script/arch/: install.py
script/arch__seabios/: run-live-once.sh
script/arch__uefi/: build.yml  build_uefi.yml  install.py  run.yml
script/archlinux-cloudimg__amd64/: README.md  qemu-compose.yml
script/ubuntu-cloudimg__amd64/: README.md  qemu-compose.yml
script/ubuntu-cloudimg__seabios/: run.yml
script/ubuntu-cloudimg__seabios/http/: meta-data  user-data
tests/: test_image_store.py  test_lifecycle_commands.py  test_main.py  test_ps_command.py  test_pull_command.py  test_rmi_command.py  test_run_command.py  test_ssh_command.py
