[project]
name = "qemu-compose"
version = "0.1.0"
readme = "README.md"
description = "docker-compose style composer for qemu"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0.2",
]

[project.scripts]
qemu-compose = "qemu_compose.main:cli"

[tool.uv]
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["qemu_compose/"]
exclude = [
  "*.rst",
]

[tool.hatch.build.targets.sdist]
packages = ["qemu_compose/"]
exclude = [
  "*.rst",
]
