[project]
name = "qemu-compose"
authors = [
    {name = "Wenlei Zhu", email = "i@ztrix.me"},
    {name = "Zhen Tang", email = "tangzhen23@foxmail.com"},
]
version = "0.8.5"
readme = "README.md"
description = "docker-compose style composer for qemu"
keywords = ["qemu", "qemu_compose", "qemu-compose"]
license-files = ["LICENSE.txt"]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Internet",
    "Topic :: Utilities",
]
dependencies = [
    "pyyaml>=6.0.0",
    "pycryptodome>=3.20.0",
]

[project.scripts]
qemu-compose = "qemu_compose.main:cli"

[tool.uv]
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["qemu_compose/"]
exclude = [
  "*.rst",
]

[tool.hatch.build.targets.sdist]
packages = ["qemu_compose/"]
exclude = [
  "*.rst",
]
